ui: set: resources view: js: saving the display settings: visual feedback, error handling

--- a/app/assets/stylesheets/general/_icons.sass
+++ b/app/assets/stylesheets/general/_icons.sass
@@ -38,3 +38,9 @@
 .active > .icon-star-empty:before,
 .icon-star:before
   content: "\e614"
+
+// Goodies from font awesome
+.icon-fixed-width 
+  width: 1.28571em
+  text-align: center
+  
