--- a/app/views/media_sets/actions/_save_display_settings.html.haml
+++ b/app/views/media_sets/actions/_save_display_settings.html.haml
@@ -1,6 +1,6 @@
 -if @can_edit
   #ui-save-display-settings.hidden{:"data-text-saved" => _("Display settings saved"), :"data-text-unsaved" => _("Save display settings")}
     %a.tertiary-button.small{:title => _("Specify sort and display settings for this set")}
-      %i.icon-eye.mid
+      %i.icon-eye.icon-fixed-width.mid
       %span.text
         = _("Specify display settings")
