--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -22,7 +22,7 @@
     .form-group
       %label Type of
       %select.form-control{name: :type}
-        = options_for_select [["All", :all], ["Group", :group], ["MetaDepartment", :meta_department]], @type
+        = options_for_select [["All", :all], ["Group", :group], ["InstitutionalGroup", :institutional_group]], @type
 
     .form-group
       = button_tag type: 'submit', class: 'btn btn-sm' do
