Admin interface: improve workflow of managing meta key definitions
Squashed commit of the following:

commit b3c28c3563dbd7766987d29dff49bdb85ca11ebb
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Aug 26 09:48:45 2014 +0200

    Admin interface: improve workflow of managing meta key definitions

--- a/app/views/app_admin/meta_key_definitions/_form.html.haml
+++ b/app/views/app_admin/meta_key_definitions/_form.html.haml
@@ -26,7 +26,7 @@
       .col-sm-6
         = f.text_area :description, class: 'form-control', rows: 6
 
-    - if @meta_key_definition.new_record? || @meta_key_definition.meta_key.meta_datum_object_type == 'MetaDatumString'
+    - if @meta_key_definition.persisted? && @meta_key_definition.meta_key.meta_datum_object_type == 'MetaDatumString'
       .form-group
         %label.control-label.col-sm-2 Length min
         .col-sm-2
