Admin interface: use autocomplete to change responsible person of a set
Squashed commit of the following:

commit b1f4219d3ecd8ddab7493d6c407dd4b9f777adb0
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Aug 26 10:46:22 2014 +0200

    Admin interface: use autocomplete to change responsible person of a set

--- a/app/views/app_admin/groups/form_add_user.html.haml
+++ b/app/views/app_admin/groups/form_add_user.html.haml
@@ -1,6 +1,6 @@
 %h1 Add user
 
-= form_tag add_user_app_admin_group_path(@group), method: 'POST', class: "form-horizontal", role: "form", id: "add-group-user" do
+= form_tag add_user_app_admin_group_path(@group), method: "POST", class: "form-horizontal autocomplete", role: "form" do
 
   = hidden_field nil, :user_id 
 
@@ -11,5 +11,5 @@
 
   .form-group
     .col-sm-offset-1.col-sm-4
-      = button_tag type: 'submit', class: 'btn btn-success', disabled: true do
+      = button_tag type: "submit", class: "btn btn-success", disabled: true do
         Add user
