--- a/app/views/app_admin/media_sets/transfer_ownership.html.haml
+++ b/app/views/app_admin/media_sets/transfer_ownership.html.haml
@@ -1,11 +1,15 @@
 %h1 Change ownership of set <em>#{@media_set.title}</em>
 
-= form_for @media_set, url: change_responsible_person_app_admin_media_set_path(@media_set) , method: "PUT", html: {class: "form-horizontal", role: "form"} do |f|
+= form_tag change_responsible_person_app_admin_media_set_path(@media_set), method: "PUT", class: "form-horizontal autocomplete", role: "form" do
+
+  = hidden_field nil, :user_id
 
   .form-group
-    %label.control-label.col-sm-2 User
+    %label.control-label.col-sm-1 User
     .col-sm-4
-      = select_tag :user_id, options_for_select(User.all.collect{ |u| [u.name, u.id]}, @media_set.user.id)
+      = text_field nil, :query, class: "form-control", placeholder: "Nachname, Vorname [login]"
 
-  = button_tag type: 'submit', class: "btn btn-success" do
-    Save
+  .form-group
+    .col-sm-offset-1.col-sm-4
+      = button_tag type: "submit", class: "btn btn-success", disabled: true do
+        Save
