ui: import: warn about CMYK images

--- a/app/views/import/start.html.haml
+++ b/app/views/import/start.html.haml
@@ -44,7 +44,8 @@
                 = _("Note")
             %p.prm.ptx
               = _("Images (TIFF, JPEG, PNG) as well as audio and video files in popular formats are processed directly and can then be displayed.")
-            %p.prm.ptx
+              = _("Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.")
+            %p.prm.pxt
               = _("Please import no more than 200 files at a time.")
           .col1of2
             %h3.title-m.plm
