Upgrade rails and some other gems
Squashed commit of the following:

commit f95f8baa0d8f0177aa8341c23944ef8e8a83a7e7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 2 09:49:15 2014 +0200

    Fix font-awesome after upgrade

commit d4bdd70c46bca57f4a39a88abaf3930fe3c3bade
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 2 09:35:01 2014 +0200

    Upgrade jquery of the admin interface

commit 9fd514e64247e7ea37f5943e47813d1348925af3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Sep 1 15:12:52 2014 +0200

    Downgrade capybara and rspec

commit 1525ef47d4f7d88f94e1bd8b9b56188c29f7abf7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Sep 1 14:48:23 2014 +0200

    Configure locales

commit 282ad20798983b723736d859d1cf3237f51911c6
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Sep 1 14:28:11 2014 +0200

    Upgrade capybara too

commit 5c04297f902eb0953c1f5f9d1b8379c86d3501d5
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Sep 1 14:15:38 2014 +0200

    Upgrade rails and gems

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -2,6 +2,7 @@
 @import 'colors'
 @import '../fonts/madek-icon-font/style'
 
+@import 'font-awesome-sprockets'
 @import 'font-awesome'
 @import 'app_admin/overrides'
 @import 'app_admin/meta_keys'
