--- a/app/assets/javascripts/views/media_resource_arcs/selection.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/selection.tmpl.haml
@@ -1,4 +1,5 @@
 .ui-resources-table
+  {{if mediaSet.hasArcs(mediaResources.first)}}
   %table.block
     %thead
       %tr
@@ -22,3 +23,10 @@
           {{/if}}
         {{/each}}
       {{/each}}
+  {{else}}
+  {{if changeTarget == "cover"}}
+  %h2 Dieses Set enthält keine Medieneinträge. Sie können daher kein Titelbild auswählen.
+  {{else}}
+  %h2 Dieses Set enthält keine Medieneinträge und keine Sets. Sie können daher keine Inhalte hervorheben.
+  {{/if}}
+  {{/if}}
