Change icons from glyphicons to fontawesome

--- a/app/views/app_admin/settings/index.html.haml
+++ b/app/views/app_admin/settings/index.html.haml
@@ -4,7 +4,7 @@
 
 %section
   %h3
-    %i.glyphicon.glyphicon-align-center
+    %i.fa.fa-align-center
     Header and footer
 
   %table.table.table-striped
@@ -22,7 +22,7 @@
 
 %section
   %h3 
-    %i.glyphicon.glyphicon-align-justify
+    %i.fa.fa-align-justify
     Welcome
 
   %table.table.table-striped
@@ -48,7 +48,7 @@
 
 %section
   %h3 
-    %i.glyphicon.glyphicon-globe
+    %i.fa.fa-globe
     Other / Urls
 
   %table.table.table-striped
@@ -92,7 +92,7 @@
 
 %section
   %h3 
-    %i.glyphicon.glyphicon-folder-close
+    %i.fa.fa-folder-close
     Special sets
 
 = form_for [:app_admin, @settings], url: app_admin_settings_path, method: "PUT", html: {class: "form-horizontal settings", role: "form", id: "special-sets-form"} do |f|
