--- a/app/views/styleguide/8 Combos/_combos.html
+++ b/app/views/styleguide/8 Combos/_combos.html
@@ -8931,18 +8931,18 @@
               <div class="pitch-login">
                 <ul class="ui-tabs ui-container">
                   <li class="active left ui-tabs-item">
-                    <a data-toggle="tab" href="#internal-user" id="zhdk-user-login-tab">
+                    <a data-toggle="tab" href="#zhdk-user" id="zhdk-user-login-tab">
                       ZHdK-Login
                     </a>
                   </li>
                   <li class="right ui-tabs-item">
-                    <a data-toggle="tab" href="#external-user" id="database-user-login-tab">
+                    <a data-toggle="tab" href="#database-user" id="database-user-login-tab">
                       Externe
                     </a>
                   </li>
                 </ul>
                 <div class="pitch-login-tab tab-content">
-                  <div class="active tab-pane" id="internal-user">
+                  <div class="active tab-pane" id="zhdk-user">
                     <form>
                       <div class="form-body">
                         <div class="ui-form-group rowed">
@@ -8954,7 +8954,7 @@
                       </div>
                     </form>
                   </div>
-                  <div class="tab-pane" id="external-user">
+                  <div class="tab-pane" id="database-user">
                     <form action="db/login" method="post">
                       <div class="form-body">
                         <div class="ui-form-group rowed compact">
