--- a/app/views/app_admin/users/show.html.haml
+++ b/app/views/app_admin/users/show.html.haml
@@ -4,10 +4,15 @@
 
 %ul.list-inline
   %li
-    =form_tag app_admin_user_path(@user), method: 'DELETE' do
-      = button_tag type: 'submit', class: "btn btn-danger" do
-        %i.icon-trash
-        Destroy
+    = link_to app_admin_user_path(@user), method: :delete, 
+        data: {confirm: "Are you sure you want to delete the user?"}, class: "btn btn-danger" do
+      %i.icon-trash
+      Destroy
+  %li
+    = link_to remove_from_admins_app_admin_user_path(@user), method: :delete, 
+        data: {confirm: "Are you sure you want to remove the user from admins?"}, class: "btn btn-danger" do
+      %i.icon-trash
+      Remove from admins
   %li
     =link_to edit_app_admin_user_path(@user), class: "btn btn-warning" do
       %i.icon-pen
