Fix guest user access to public pdfs
Squashed commit of the following:

commit 418938a7cac1408c6f62b7220c8a8da50893787e
Author: Jonasz Grochowski <tensaioni@gmail.com>
Date:   Mon Aug 18 09:01:47 2014 +0200

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
     // TODO INTERNATIONALIZE
     %title= @app_settings.title || "Medienarchiv"
     -# hack!
-    - if current_user.contrast_mode
+    - if current_user.try(:contrast_mode)
       = stylesheet_link_tag "application-contrasted", :media => "all"
     - else
       = stylesheet_link_tag "application", :media => "all"
