Export low resolution video rather than jpeg thumbnail
Squashed commit of the following:

commit 831bbdae4ea4e76c39d697d170ec92581e0f1379
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Sep 16 12:17:20 2014 +0200

--- a/app/views/media_entries/export/_original_meta_data.html.haml
+++ b/app/views/media_entries/export/_original_meta_data.html.haml
@@ -22,7 +22,7 @@
 
         - if @x_large_file
           %li.ui-drop-item.by-right
-            %a{:href => "/download?id=#{@media_entry.id}&size=x_large"}
+            %a{:href => "/download?id=#{@media_entry.id}&size=#{@preview_size}"}
               = number_to_human_size(@x_large_file.size)
               = "(#{dimensions_for(@x_large_file)})" if dimensions_for(@x_large_file)
               %strong= @format_original_file
