Colorschemes are configurable by ansible

--- a/app/assets/stylesheets/_config.sass
+++ b/app/assets/stylesheets/_config.sass
@@ -7,6 +7,10 @@ $scheme-red           : false
 $scheme-blue          : false
 $scheme-mono          : false
 
+@import "config/defaults/*"
+
+@import "config/local/*" 
+
 +colour-palette
 
 /* Typography
