Fix font-awesome path

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,11 +1,5 @@
-/**
- * APPLICATION
- * The main file that will be available to the browser
- * Authors:
- * - Piotr Fedorczyk <piotr@interactivethings.com>
- * - Peter Gassner <peter@interactivethings.com>
-
-@import 'font-awesome'
+@import font-awesome-sprockets
+@import font-awesome
 @import colors
 @import config
 @import loader
